pipelines/trigger-template.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-build-pipeline
  name: el-build-pipeline
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-event-listener-build-pipeline
    weight: 100
  wildcardPolicy: None
